# unit-of-work

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
src/di_unit_of_work/: base_dao.py  session_aspect.py  session_cache.py  session_provider.py  transactional_decorator.py
src/di_unit_of_work/example/: main.py  orm_model.py  source_document_data_operations.py
src/di_unit_of_work/session_factory/: sqlite_session_factory.py
src/unit_of_work/: base_dao.py  session_aspect.py  session_provider.py
src/unit_of_work.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/unit_of_work/example/: main.py  source_document_data_operations.py
src/unit_of_work/session_factory/: abstract_session_factory.py  sqlite_session_factory.py
tests/: test_session_aspect.py  test_session_cache.py  test_session_smoke.py
