[project]
name = "di-unit-of-work"
version = "0.0.2"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "python-di-application>=0.2.0",
    "sqlalchemy>=2.0.48",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ty>=0.0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/di_unit_of_work"]
